<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="300dp"
              android:layout_height="160dp"
              android:background="@drawable/bg"
              android:orientation="vertical">

    <TextView
        style="@style/TvDialogTitle"
        android:text="@string/please_set_id"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView
                style="@style/TvSetId"
                android:text="@string/left_front_hint"/>

            <EditText
                android:id="@+id/et_left_front"
                style="@style/EtSetId"/>

            <TextView
                style="@style/TvSetId"
                android:text="@string/right_front_hint"/>

            <EditText
                android:id="@+id/et_right_front"
                style="@style/EtSetId"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView
                style="@style/TvSetId"
                android:text="@string/left_rear_hint"/>

            <EditText
                android:id="@+id/et_left_rear"
                style="@style/EtSetId"/>

            <TextView
                style="@style/TvSetId"
                android:text="@string/right_rear_hint"/>

            <EditText
                android:id="@+id/et_right_rear"
                style="@style/EtSetId"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_query"
        android:text="@string/query"
        style="@style/BtnQuery"/>
</LinearLayout>