<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_get_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="扫描(获取胎压信息)"/>


        <Button
            android:id="@+id/btn_clear_log"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="清空Log"/>

        <Button
            android:id="@+id/btn_stop_scan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="停止扫描"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_set_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_left_front"
                style="@style/TVTyreId"
                android:text="@string/left_front_id"/>

            <TextView
                android:id="@+id/tv_right_front"
                style="@style/TVTyreId"
                android:text="@string/right_front_id"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_left_rear"
                style="@style/TVTyreId"
                android:text="@string/left_rear_id"/>

            <TextView
                android:id="@+id/tv_right_rear"
                style="@style/TVTyreId"
                android:text="@string/right_rear_id"/>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_show_log"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
